[package]
name = "create-release-pr"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
octocrab = { git = "https://github.com/igtm/octocrab", branch = "feature/update-pull-request" }
once_cell = "1.16.0"
regex = "1.7.0"
tokio = { version = "1.21.2", features = ["full"] }
